Template can now evaluate java script dynamically

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,12 @@
 {% extends "main.html" %}
 
 {% block content %}
-By Chris (machr666@gmail.com)
+<p>The source code of this website can be found on <a href="https://github.com/machr666"
+    target="window">github</a>.I am looking forward to any comments and suggestions!</p>
+
+<p>Techical info: This website powered by a Python/<a href="http://www.tornadoweb.org" 
+    target="window">Tornado</a> HTTP server. We suggest running the server on a <a href=
+    "http://www.raspberrypi.org/" target="window">Raspberry Pi</a> or a similar
+    low-powered device and use a desktop computer to do the TV tuning and transcoding
+    (using software such as <a href="http://www.videolan.org" target="window">VLC</a>)</p>
 {% end %}
