--- a/templates/myStyle/static/css/style.css
+++ b/templates/myStyle/static/css/style.css
@@ -3,7 +3,6 @@
 
 body {
 	font: 0.8em "Lucida Sans Unicode", "Lucida Grande", Arial, Helvetica, sans-serif;
-	color: #444444;
 	background: #222222;
 	margin: 0;
 	padding: 0;
@@ -12,6 +11,7 @@ body {
 	width: 50%;
 	margin: 1% auto;
 	background: #0d0d0d;
+	color: #aaaaaa;
 	padding: 50px 25px 25px 25px;
 	border: 12px solid #2e2e2e;
 	position: relative;
@@ -58,7 +58,8 @@ body {
 #nav li a:hover {
 	background: #1b1b1b url(images/nav_bar_o.jpg) repeat-x;
 }
-#content {
+#content a {
+    color: #E3E332;
 }
 h2 {
 	margin: 0;
@@ -69,8 +70,13 @@ h2 {
 p {
 	margin: 0;
 	padding: 0.4em 0;
-	color:#686868;
 	line-height:1.4em;
+    text-align: justify;
+}
+p:first-letter {
+    font-size: 1.5em;
+    color:#E3E332;
+    font-family:Helvetica, Arial, Sans-serif;
 }
 #content img.right {
 	float: right;
@@ -82,7 +88,7 @@ p {
 	color: white;
 	text-align: right;
 	margin: 25px 0 0 0;
-	border-top:1px solid #222222;
+	border-top:1px solid #2e2e2e;
 }
 #load {
     display: none;
