Forgot to add magic cookie key to config page

--- a/templates/config.html
+++ b/templates/config.html
@@ -83,6 +83,7 @@ on a single TV tuner-card.</p>
 </table>
 <br>
 <center>
+    {% module xsrf_form_html() %}
     <input type="submit" value="Save configuration">
 </center>
 <form>
