--- a/templates/myStyle/static/css/style.css
+++ b/templates/myStyle/static/css/style.css
@@ -107,22 +107,10 @@ table {
   float: right;
 }
 
-.channellist input[type="radio"] {
+.programlist input[type="radio"] {
   display: none;
 }
-
-.specialscrollbar {
-  scrollbar-face-color: #222222;
-  scrollbar-3dlight-color: #222222;
-  scrollbar-base-color: #222222;
-  scrollbar-track-color: #222222;
-  scrollbar-darkshadow-color: #000;
-  scrollbar-arrow-color: #000;
-  scrollbar-shadow-color: #fff;
-  scrollbar-highlight-color: #fff;
-}
-
-.channellist label {
+.programlist label {
   display:inline-block;
   background-color:#222222;
   color: white;
@@ -131,8 +119,7 @@ table {
   font-size: 1em;
   width: 200px
 }
-
-.channellist input[type="radio"]:checked + label
+.programlist input[type="radio"]:checked + label
 {
   background-color:#444444;
 }
