Redesigned stream server handling. Servers are now neatly separated from streams that they are running

--- a/templates/myStyle/main.html
+++ b/templates/myStyle/main.html
@@ -19,16 +19,18 @@
             <script>
                 $("#nav").prepend($(
                 '<li><a href="#home">Home</a></li>'+
+                '<li><a href="#about">About</a></li>'+
                 '<li><a href="#tv">TV</a></li>'+
                 '<li><a href="#config">Config</a></li>'+
-                '<li><a href="#about">About</a></li>'
+                '<li><a href="#server">Servers</a></li>'
                 ));
             </script>
             <noscript>
                 <li><a href="home">Home</a></li>
+                <li><a href="about">About</a></li>
                 <li><a href="tv">TV</a></li>
                 <li><a href="config">Config</a></li>
-                <li><a href="about">About</a></li>
+                <li><a href="config">Servers</a></li>
             </noscript>
             <li id="logout"><a href="logout">Logout</a></li>
         </ul>
