More work done on stream config page. TODO: Save/Apply config + Improve layout of stream config page.

--- a/templates/myStyle/main.html
+++ b/templates/myStyle/main.html
@@ -21,7 +21,7 @@
                 '<li><a href="#home">Home</a></li>'+
                 '<li><a href="#about">About</a></li>'+
                 '<li><a href="#tv">TV</a></li>'+
-                '<li><a href="#config">Config</a></li>'+
+                '<li><a href="#stream">Streams</a></li>'+
                 '<li><a href="#server">Servers</a></li>'
                 ));
             </script>
@@ -29,8 +29,8 @@
                 <li><a href="home">Home</a></li>
                 <li><a href="about">About</a></li>
                 <li><a href="tv">TV</a></li>
-                <li><a href="config">Config</a></li>
-                <li><a href="config">Servers</a></li>
+                <li><a href="stream">Stream</a></li>
+                <li><a href="server">Servers</a></li>
             </noscript>
             <li id="logout"><a href="logout">Logout</a></li>
         </ul>
